// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AppListing should render the app listing when definitions are present 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": .emotion-3 button {
  height: 20px;
  border: none;
  background-color: transparent;
  -webkit-transform: translateX(-10px);
  -ms-transform: translateX(-10px);
  transform: translateX(-10px);
  opacity: 0;
  -webkit-transition: all 0.2s cubic-bezier(0.13,0.62,0.11,0.99);
  transition: all 0.2s cubic-bezier(0.13,0.62,0.11,0.99);
}

.emotion-3 button:hover {
  background-color: transparent;
  border: none;
  opacity: 1;
  -webkit-transform: translateX(0);
  -ms-transform: translateX(0);
  transform: translateX(0);
}

.emotion-7 {
  vertical-align: middle;
}

.emotion-24 {
  color: #b4c3ca;
  border-bottom: 1px solid #d3dce0;
  font-weight: 400;
}

.emotion-1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  min-width: 200px;
}

.emotion-0 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  margin-right: 0.75rem;
  vertical-align: sub;
}

.emotion-6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: end;
  -webkit-justify-content: flex-end;
  -ms-flex-pack: end;
  justify-content: flex-end;
  height: 20px;
}

.emotion-6 div {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.emotion-2 {
  font-family: SFMono-Regular,Consolas,Liberation Mono,Menlo,monospace;
}

.emotion-2:hover ~ .emotion-3 button {
  opacity: 1;
  -webkit-transform: translateX(0);
  -ms-transform: translateX(0);
  transform: translateX(0);
}

<body>
    <div>
      <div
        class="Workbench__Workbench___THi9K"
        data-test-id="cf-ui-workbench"
      >
        <div
          class="Workbench__Workbench__header___2wo2E"
          data-test-id="cf-ui-workbench-header"
        >
          <div
            class="Workbench__Workbench__header-icon___1kJlL"
          >
            <div
              class="ProductIcon__ProductIconContainer___KxjpT ProductIcon__ProductIconContainer--large___2-NC8"
              data-test-id="cf-ui-navigation-icon"
            >
              <svg
                class="ProductIcon__ProductIcon___3MTbf ProductIcon__ProductIcon--positive___3gPLA"
                fill="none"
                height="1em"
                viewBox="0 0 24 24"
                width="1em"
              >
                <path
                  d="M18.364 11.09h.909a2.727 2.727 0 110 5.456h-.91v3.181A2.278 2.278 0 0116.092 22h-3.91v-1.818a2.001 2.001 0 00-4 0V22H4.274A2.278 2.278 0 012 19.727v-3.909h1.818a2.001 2.001 0 000-4H2.01V7.91a2.27 2.27 0 012.264-2.273h3.182v-.909a2.727 2.727 0 115.454 0v.91h3.182a2.278 2.278 0 012.273 2.272v3.182zm-2.273 10c.749 0 1.363-.614 1.363-1.363v-4.09h1.819a1.818 1.818 0 000-3.637h-1.819V7.91c0-.75-.614-1.365-1.363-1.365H12V4.727a1.818 1.818 0 00-3.636 0v1.818H4.273c-.747 0-1.355.612-1.355 1.364v3h.9a2.91 2.91 0 012.91 2.91 2.91 2.91 0 01-2.91 2.908H2.91v3c0 .75.615 1.364 1.364 1.364h3v-.91a2.91 2.91 0 012.909-2.908 2.91 2.91 0 012.909 2.909v.909h3z"
                />
              </svg>
            </div>
          </div>
          <div
            class="Workbench__Workbench__header-title___3xp7b"
            data-test-id="workbench-title"
          >
            <h1
              class="Heading__Heading___83D3K"
              data-test-id="cf-ui-heading"
            >
              Apps
            </h1>
          </div>
          <div
            class="Workbench__Workbench__header-actions___mJoSR"
          >
            <button
              class="Button__Button___1ZfFj Button__Button--primary___JImeO"
              data-test-id="cf-ui-button"
              type="button"
            >
              <span
                class="TabFocusTrap__TabFocusTrap___39Vty Button__Button__inner-wrapper___3qrNC"
                tabindex="-1"
              >
                <span
                  class="Button__Button__label___3tcOj"
                >
                  Create app
                </span>
              </span>
            </button>
          </div>
        </div>
        <div
          class="Workbench__Workbench__content-wrapper___3yWKi"
        >
          <div
            class="Workbench__Workbench__content___1U8bV"
            data-test-id="cf-ui-workbench-content"
          >
            <div
              class="Workbench__Workbench__content-inner___36_Hx Workbench__Workbench__content-inner--default___2wRXn"
            >
              <table
                cellpadding="0"
                cellspacing="0"
                class="Table__Table___3vKIR Table__Table--inline___2jv97"
                data-test-id="cf-ui-table"
              >
                <thead
                  class=""
                  data-test-id="cf-ui-table-head"
                >
                  <tr
                    class=""
                    data-test-id="cf-ui-table-row"
                  >
                    <th
                      align="left"
                      class="TableCell__TableCell___ZC2ZI TableCell__TableCell--head___3AHws"
                      data-test-id="cf-ui-table-cell"
                      style="top: 0px;"
                    >
                      Name
                    </th>
                    <th
                      align="left"
                      class="TableCell__TableCell___ZC2ZI TableCell__TableCell--head___3AHws"
                      data-test-id="cf-ui-table-cell"
                      style="top: 0px;"
                    >
                      ID
                    </th>
                    <th
                      align="left"
                      class="TableCell__TableCell___ZC2ZI TableCell__TableCell--head___3AHws"
                      data-test-id="cf-ui-table-cell"
                      style="top: 0px;"
                    >
                      App URL
                    </th>
                    <th
                      align="left"
                      class="TableCell__TableCell___ZC2ZI TableCell__TableCell--head___3AHws"
                      data-test-id="cf-ui-table-cell"
                      style="top: 0px;"
                    />
                  </tr>
                </thead>
                <tbody
                  data-test-id="cf-ui-table-body"
                >
                  <tr
                    class=""
                    data-test-id="cf-ui-table-row"
                  >
                    <td
                      align="left"
                      class="TableCell__TableCell___ZC2ZI"
                      data-test-id="cf-ui-table-cell"
                      style="top: 0px;"
                    >
                      <div
                        class="emotion-1"
                      >
                        <a
                          href="/account.organizations?pathname=/my-org-123/apps/definitions/3AjEyjWz5tRouW4cVOF9la/general"
                          route="[object Object]"
                          state="[object Object]"
                          to="account.organizations?pathname=/my-org-123/apps/definitions/3AjEyjWz5tRouW4cVOF9la/general"
                        >
                          <span
                            class="emotion-0"
                          >
                            <div
                              class="ProductIcon__ProductIconContainer___KxjpT ProductIcon__ProductIconContainer--small___3EUYb"
                              data-test-id="cf-ui-navigation-icon"
                            >
                              <svg
                                class="ProductIcon__ProductIcon___3MTbf ProductIcon__ProductIcon--positive___3gPLA"
                                fill="none"
                                height="1em"
                                viewBox="0 0 24 24"
                                width="1em"
                              >
                                <path
                                  d="M18.364 11.09h.909a2.727 2.727 0 110 5.456h-.91v3.181A2.278 2.278 0 0116.092 22h-3.91v-1.818a2.001 2.001 0 00-4 0V22H4.274A2.278 2.278 0 012 19.727v-3.909h1.818a2.001 2.001 0 000-4H2.01V7.91a2.27 2.27 0 012.264-2.273h3.182v-.909a2.727 2.727 0 115.454 0v.91h3.182a2.278 2.278 0 012.273 2.272v3.182zm-2.273 10c.749 0 1.363-.614 1.363-1.363v-4.09h1.819a1.818 1.818 0 000-3.637h-1.819V7.91c0-.75-.614-1.365-1.363-1.365H12V4.727a1.818 1.818 0 00-3.636 0v1.818H4.273c-.747 0-1.355.612-1.355 1.364v3h.9a2.91 2.91 0 012.91 2.91 2.91 2.91 0 01-2.91 2.908H2.91v3c0 .75.615 1.364 1.364 1.364h3v-.91a2.91 2.91 0 012.909-2.908 2.91 2.91 0 012.909 2.909v.909h3z"
                                />
                              </svg>
                            </div>
                          </span>
                           
                          <b>
                            Google Analytics
                          </b>
                        </a>
                      </div>
                    </td>
                    <td
                      align="left"
                      class="TableCell__TableCell___ZC2ZI"
                      data-test-id="cf-ui-table-cell"
                      style="top: 0px;"
                    >
                      <div
                        class="emotion-1"
                      >
                        <span
                          class="emotion-2"
                        >
                          3AjEyjWz5tRouW4cVOF9la
                           
                        </span>
                        <div
                          class="CopyButton__CopyButton___OoA5D emotion-3"
                          data-test-id="cf-ui-copy-button"
                          id="copyButton"
                        >
                          <span
                            class="Tooltip__TooltipContainer___3YlPf"
                          >
                            <button
                              class="CopyButton__CopyButton__button___52Bc0 a11y__focus-outline--default___2hwb1"
                              type="button"
                            >
                              <span
                                class="TabFocusTrap__TabFocusTrap___39Vty CopyButton__CopyButton__TabFocusTrap___1Q_DQ"
                                tabindex="-1"
                              >
                                <span
                                  class="CopyButton__CopyButton__text___269PQ helpers__sr-only___3Kv3z"
                                >
                                  Copy 
                                  3AjEyjWz5tRouW4cVOF9la
                                   to clipboard
                                </span>
                                <svg
                                  class="Icon__Icon___38Epv Icon__Icon--small___1yGZK Icon__Icon--muted___3egnD"
                                  data-test-id="cf-ui-icon"
                                  height="1em"
                                  viewBox="0 0 24 24"
                                  width="1em"
                                >
                                  <path
                                    d="M0 0h24v24H0z"
                                    fill="none"
                                  />
                                  <path
                                    d="M16 1H4c-1.1 0-2 .9-2 2v14h2V3h12V1zm3 4H8c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h11c1.1 0 2-.9 2-2V7c0-1.1-.9-2-2-2zm0 16H8V7h11v14z"
                                  />
                                </svg>
                              </span>
                            </button>
                          </span>
                        </div>
                      </div>
                    </td>
                    <td
                      align="left"
                      class="TableCell__TableCell___ZC2ZI"
                      data-test-id="cf-ui-table-cell"
                      style="top: 0px;"
                    >
                      <div
                        class="emotion-1"
                      >
                        <span>
                          localhost:1234
                        </span>
                      </div>
                    </td>
                    <td
                      align="right"
                      class="TableCell__TableCell___ZC2ZI emotion-7"
                      data-test-id="cf-ui-table-cell"
                      style="top: 0px;"
                    >
                      <div
                        class="emotion-6"
                      >
                        <div
                          class="Dropdown__Dropdown___nAsJ-"
                          data-test-id="cf-ui-card-actions"
                        >
                          <button
                            aria-expanded="false"
                            aria-haspopup="menu"
                            class="IconButton__IconButton___1_XeU a11y__focus-outline--default___2hwb1 IconButton__IconButton--primary___1nYDN"
                            data-test-id="cf-ui-icon-button"
                            type="button"
                          >
                            <span
                              class="TabFocusTrap__TabFocusTrap___39Vty IconButton__IconButton__inner___3fnmT"
                              tabindex="-1"
                            >
                              <svg
                                class="Icon__Icon___38Epv Icon__Icon--small___1yGZK undefined IconButton__IconButton__icon___3yZQN"
                                data-test-id="cf-ui-icon"
                                height="1em"
                                viewBox="0 0 24 24"
                                width="1em"
                              >
                                <path
                                  d="M0 0h24v24H0z"
                                  fill="none"
                                />
                                <path
                                  d="M6 10c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2zm12 0c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2zm-6 0c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2z"
                                />
                              </svg>
                              <span
                                class="IconButton__IconButton__label___1kp5y helpers__sr-only___3Kv3z"
                              >
                                Actions
                              </span>
                            </span>
                          </button>
                        </div>
                      </div>
                    </td>
                  </tr>
                  <tr
                    class=""
                    data-test-id="cf-ui-table-row"
                  >
                    <td
                      align="left"
                      class="TableCell__TableCell___ZC2ZI"
                      data-test-id="cf-ui-table-cell"
                      style="top: 0px;"
                    >
                      <div
                        class="emotion-1"
                      >
                        <a
                          href="/account.organizations?pathname=/my-org-123/apps/definitions/2WoMzSs2fRJx79JeVvqdGR/general"
                          route="[object Object]"
                          state="[object Object]"
                          to="account.organizations?pathname=/my-org-123/apps/definitions/2WoMzSs2fRJx79JeVvqdGR/general"
                        >
                          <span
                            class="emotion-0"
                          >
                            <div
                              class="ProductIcon__ProductIconContainer___KxjpT ProductIcon__ProductIconContainer--small___3EUYb"
                              data-test-id="cf-ui-navigation-icon"
                            >
                              <svg
                                class="ProductIcon__ProductIcon___3MTbf ProductIcon__ProductIcon--positive___3gPLA"
                                fill="none"
                                height="1em"
                                viewBox="0 0 24 24"
                                width="1em"
                              >
                                <path
                                  d="M18.364 11.09h.909a2.727 2.727 0 110 5.456h-.91v3.181A2.278 2.278 0 0116.092 22h-3.91v-1.818a2.001 2.001 0 00-4 0V22H4.274A2.278 2.278 0 012 19.727v-3.909h1.818a2.001 2.001 0 000-4H2.01V7.91a2.27 2.27 0 012.264-2.273h3.182v-.909a2.727 2.727 0 115.454 0v.91h3.182a2.278 2.278 0 012.273 2.272v3.182zm-2.273 10c.749 0 1.363-.614 1.363-1.363v-4.09h1.819a1.818 1.818 0 000-3.637h-1.819V7.91c0-.75-.614-1.365-1.363-1.365H12V4.727a1.818 1.818 0 00-3.636 0v1.818H4.273c-.747 0-1.355.612-1.355 1.364v3h.9a2.91 2.91 0 012.91 2.91 2.91 2.91 0 01-2.91 2.908H2.91v3c0 .75.615 1.364 1.364 1.364h3v-.91a2.91 2.91 0 012.909-2.908 2.91 2.91 0 012.909 2.909v.909h3z"
                                />
                              </svg>
                            </div>
                          </span>
                           
                          <b>
                            Jira
                          </b>
                        </a>
                      </div>
                    </td>
                    <td
                      align="left"
                      class="TableCell__TableCell___ZC2ZI"
                      data-test-id="cf-ui-table-cell"
                      style="top: 0px;"
                    >
                      <div
                        class="emotion-1"
                      >
                        <span
                          class="emotion-2"
                        >
                          2WoMzSs2fRJx79JeVvqdGR
                           
                        </span>
                        <div
                          class="CopyButton__CopyButton___OoA5D emotion-3"
                          data-test-id="cf-ui-copy-button"
                          id="copyButton"
                        >
                          <span
                            class="Tooltip__TooltipContainer___3YlPf"
                          >
                            <button
                              class="CopyButton__CopyButton__button___52Bc0 a11y__focus-outline--default___2hwb1"
                              type="button"
                            >
                              <span
                                class="TabFocusTrap__TabFocusTrap___39Vty CopyButton__CopyButton__TabFocusTrap___1Q_DQ"
                                tabindex="-1"
                              >
                                <span
                                  class="CopyButton__CopyButton__text___269PQ helpers__sr-only___3Kv3z"
                                >
                                  Copy 
                                  2WoMzSs2fRJx79JeVvqdGR
                                   to clipboard
                                </span>
                                <svg
                                  class="Icon__Icon___38Epv Icon__Icon--small___1yGZK Icon__Icon--muted___3egnD"
                                  data-test-id="cf-ui-icon"
                                  height="1em"
                                  viewBox="0 0 24 24"
                                  width="1em"
                                >
                                  <path
                                    d="M0 0h24v24H0z"
                                    fill="none"
                                  />
                                  <path
                                    d="M16 1H4c-1.1 0-2 .9-2 2v14h2V3h12V1zm3 4H8c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h11c1.1 0 2-.9 2-2V7c0-1.1-.9-2-2-2zm0 16H8V7h11v14z"
                                  />
                                </svg>
                              </span>
                            </button>
                          </span>
                        </div>
                      </div>
                    </td>
                    <td
                      align="left"
                      class="TableCell__TableCell___ZC2ZI"
                      data-test-id="cf-ui-table-cell"
                      style="top: 0px;"
                    >
                      <div
                        class="emotion-1"
                      >
                        <span>
                          localhost:1234
                        </span>
                      </div>
                    </td>
                    <td
                      align="right"
                      class="TableCell__TableCell___ZC2ZI emotion-7"
                      data-test-id="cf-ui-table-cell"
                      style="top: 0px;"
                    >
                      <div
                        class="emotion-6"
                      >
                        <div
                          class="Dropdown__Dropdown___nAsJ-"
                          data-test-id="cf-ui-card-actions"
                        >
                          <button
                            aria-expanded="false"
                            aria-haspopup="menu"
                            class="IconButton__IconButton___1_XeU a11y__focus-outline--default___2hwb1 IconButton__IconButton--primary___1nYDN"
                            data-test-id="cf-ui-icon-button"
                            type="button"
                          >
                            <span
                              class="TabFocusTrap__TabFocusTrap___39Vty IconButton__IconButton__inner___3fnmT"
                              tabindex="-1"
                            >
                              <svg
                                class="Icon__Icon___38Epv Icon__Icon--small___1yGZK undefined IconButton__IconButton__icon___3yZQN"
                                data-test-id="cf-ui-icon"
                                height="1em"
                                viewBox="0 0 24 24"
                                width="1em"
                              >
                                <path
                                  d="M0 0h24v24H0z"
                                  fill="none"
                                />
                                <path
                                  d="M6 10c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2zm12 0c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2zm-6 0c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2z"
                                />
                              </svg>
                              <span
                                class="IconButton__IconButton__label___1kp5y helpers__sr-only___3Kv3z"
                              >
                                Actions
                              </span>
                            </span>
                          </button>
                        </div>
                      </div>
                    </td>
                  </tr>
                  <tr
                    class=""
                    data-test-id="cf-ui-table-row"
                  >
                    <td
                      align="left"
                      class="TableCell__TableCell___ZC2ZI"
                      data-test-id="cf-ui-table-cell"
                      style="top: 0px;"
                    >
                      <div
                        class="emotion-1"
                      >
                        <a
                          href="/account.organizations?pathname=/my-org-123/apps/definitions/3cG9ueyzkY0GCndLiQzmZ0/general"
                          route="[object Object]"
                          state="[object Object]"
                          to="account.organizations?pathname=/my-org-123/apps/definitions/3cG9ueyzkY0GCndLiQzmZ0/general"
                        >
                          <span
                            class="emotion-0"
                          >
                            <div
                              class="ProductIcon__ProductIconContainer___KxjpT ProductIcon__ProductIconContainer--small___3EUYb"
                              data-test-id="cf-ui-navigation-icon"
                            >
                              <svg
                                class="ProductIcon__ProductIcon___3MTbf ProductIcon__ProductIcon--positive___3gPLA"
                                fill="none"
                                height="1em"
                                viewBox="0 0 24 24"
                                width="1em"
                              >
                                <path
                                  d="M18.364 11.09h.909a2.727 2.727 0 110 5.456h-.91v3.181A2.278 2.278 0 0116.092 22h-3.91v-1.818a2.001 2.001 0 00-4 0V22H4.274A2.278 2.278 0 012 19.727v-3.909h1.818a2.001 2.001 0 000-4H2.01V7.91a2.27 2.27 0 012.264-2.273h3.182v-.909a2.727 2.727 0 115.454 0v.91h3.182a2.278 2.278 0 012.273 2.272v3.182zm-2.273 10c.749 0 1.363-.614 1.363-1.363v-4.09h1.819a1.818 1.818 0 000-3.637h-1.819V7.91c0-.75-.614-1.365-1.363-1.365H12V4.727a1.818 1.818 0 00-3.636 0v1.818H4.273c-.747 0-1.355.612-1.355 1.364v3h.9a2.91 2.91 0 012.91 2.91 2.91 2.91 0 01-2.91 2.908H2.91v3c0 .75.615 1.364 1.364 1.364h3v-.91a2.91 2.91 0 012.909-2.908 2.91 2.91 0 012.909 2.909v.909h3z"
                                />
                              </svg>
                            </div>
                          </span>
                           
                          <b>
                            Smartling
                          </b>
                        </a>
                      </div>
                    </td>
                    <td
                      align="left"
                      class="TableCell__TableCell___ZC2ZI"
                      data-test-id="cf-ui-table-cell"
                      style="top: 0px;"
                    >
                      <div
                        class="emotion-1"
                      >
                        <span
                          class="emotion-2"
                        >
                          3cG9ueyzkY0GCndLiQzmZ0
                           
                        </span>
                        <div
                          class="CopyButton__CopyButton___OoA5D emotion-3"
                          data-test-id="cf-ui-copy-button"
                          id="copyButton"
                        >
                          <span
                            class="Tooltip__TooltipContainer___3YlPf"
                          >
                            <button
                              class="CopyButton__CopyButton__button___52Bc0 a11y__focus-outline--default___2hwb1"
                              type="button"
                            >
                              <span
                                class="TabFocusTrap__TabFocusTrap___39Vty CopyButton__CopyButton__TabFocusTrap___1Q_DQ"
                                tabindex="-1"
                              >
                                <span
                                  class="CopyButton__CopyButton__text___269PQ helpers__sr-only___3Kv3z"
                                >
                                  Copy 
                                  3cG9ueyzkY0GCndLiQzmZ0
                                   to clipboard
                                </span>
                                <svg
                                  class="Icon__Icon___38Epv Icon__Icon--small___1yGZK Icon__Icon--muted___3egnD"
                                  data-test-id="cf-ui-icon"
                                  height="1em"
                                  viewBox="0 0 24 24"
                                  width="1em"
                                >
                                  <path
                                    d="M0 0h24v24H0z"
                                    fill="none"
                                  />
                                  <path
                                    d="M16 1H4c-1.1 0-2 .9-2 2v14h2V3h12V1zm3 4H8c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h11c1.1 0 2-.9 2-2V7c0-1.1-.9-2-2-2zm0 16H8V7h11v14z"
                                  />
                                </svg>
                              </span>
                            </button>
                          </span>
                        </div>
                      </div>
                    </td>
                    <td
                      align="left"
                      class="TableCell__TableCell___ZC2ZI"
                      data-test-id="cf-ui-table-cell"
                      style="top: 0px;"
                    >
                      <div
                        class="emotion-1"
                      >
                        <span>
                          localhost:8080/frontend
                        </span>
                      </div>
                    </td>
                    <td
                      align="right"
                      class="TableCell__TableCell___ZC2ZI emotion-7"
                      data-test-id="cf-ui-table-cell"
                      style="top: 0px;"
                    >
                      <div
                        class="emotion-6"
                      >
                        <div
                          class="Dropdown__Dropdown___nAsJ-"
                          data-test-id="cf-ui-card-actions"
                        >
                          <button
                            aria-expanded="false"
                            aria-haspopup="menu"
                            class="IconButton__IconButton___1_XeU a11y__focus-outline--default___2hwb1 IconButton__IconButton--primary___1nYDN"
                            data-test-id="cf-ui-icon-button"
                            type="button"
                          >
                            <span
                              class="TabFocusTrap__TabFocusTrap___39Vty IconButton__IconButton__inner___3fnmT"
                              tabindex="-1"
                            >
                              <svg
                                class="Icon__Icon___38Epv Icon__Icon--small___1yGZK undefined IconButton__IconButton__icon___3yZQN"
                                data-test-id="cf-ui-icon"
                                height="1em"
                                viewBox="0 0 24 24"
                                width="1em"
                              >
                                <path
                                  d="M0 0h24v24H0z"
                                  fill="none"
                                />
                                <path
                                  d="M6 10c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2zm12 0c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2zm-6 0c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2z"
                                />
                              </svg>
                              <span
                                class="IconButton__IconButton__label___1kp5y helpers__sr-only___3Kv3z"
                              >
                                Actions
                              </span>
                            </span>
                          </button>
                        </div>
                      </div>
                    </td>
                  </tr>
                </tbody>
              </table>
            </div>
          </div>
          <div
            class="Workbench__Workbench__sidebar___3i7n0 Workbench__Workbench__sidebar--right___3f4XO"
            data-test-id="cf-ui-workbench-sidebar-right"
          >
            <div
              class="Typography__Typography___1ZUfE"
              data-test-id="cf-ui-text-container"
            >
              <h3
                class="SectionHeading__SectionHeading___39J6j emotion-24 f36-margin-bottom--l"
                data-test-id="cf-ui-section-heading"
              >
                About Apps
              </h3>
              <p
                class="Paragraph__Paragraph___2aO-9 f36-margin-bottom--m"
                data-test-id="cf-ui-paragraph"
              >
                Build apps for your Contentful organization to extend the core functionality of the web app and optimize the workflow of editors.
              </p>
              <p
                class="Paragraph__Paragraph___2aO-9 f36-margin-bottom--m"
                data-test-id="cf-ui-paragraph"
              >
                Learn more about
                 
                <a
                  class="TextLink__TextLink___1biUr a11y__focus-outline--default___2hwb1 TextLink__TextLink--primary___2Vc9F"
                  data-test-id="cf-ui-text-link"
                  href="https://www.contentful.com/developers/docs/extensibility/app-framework/tutorial/?utm_source=webapp&utm_medium=app-listing&utm_campaign=in-app-help"
                >
                  <span
                    class="TabFocusTrap__TabFocusTrap___39Vty"
                    tabindex="-1"
                  >
                    building Contentful apps
                  </span>
                </a>
                 
                or check out our
                 
                <a
                  class="TextLink__TextLink___1biUr a11y__focus-outline--default___2hwb1 TextLink__TextLink--primary___2Vc9F"
                  data-test-id="cf-ui-text-link"
                  href="https://contentful.com/marketplace?utm_source=webapp&utm_medium=app-listing&utm_campaign=in-app-help"
                >
                  <span
                    class="TabFocusTrap__TabFocusTrap___39Vty"
                    tabindex="-1"
                  >
                    Marketplace
                  </span>
                </a>
                .
              </p>
            </div>
          </div>
        </div>
      </div>
    </div>
  </body>,
  "container": .emotion-3 button {
  height: 20px;
  border: none;
  background-color: transparent;
  -webkit-transform: translateX(-10px);
  -ms-transform: translateX(-10px);
  transform: translateX(-10px);
  opacity: 0;
  -webkit-transition: all 0.2s cubic-bezier(0.13,0.62,0.11,0.99);
  transition: all 0.2s cubic-bezier(0.13,0.62,0.11,0.99);
}

.emotion-3 button:hover {
  background-color: transparent;
  border: none;
  opacity: 1;
  -webkit-transform: translateX(0);
  -ms-transform: translateX(0);
  transform: translateX(0);
}

.emotion-7 {
  vertical-align: middle;
}

.emotion-24 {
  color: #b4c3ca;
  border-bottom: 1px solid #d3dce0;
  font-weight: 400;
}

.emotion-1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  min-width: 200px;
}

.emotion-0 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  margin-right: 0.75rem;
  vertical-align: sub;
}

.emotion-6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: end;
  -webkit-justify-content: flex-end;
  -ms-flex-pack: end;
  justify-content: flex-end;
  height: 20px;
}

.emotion-6 div {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.emotion-2 {
  font-family: SFMono-Regular,Consolas,Liberation Mono,Menlo,monospace;
}

.emotion-2:hover ~ .emotion-3 button {
  opacity: 1;
  -webkit-transform: translateX(0);
  -ms-transform: translateX(0);
  transform: translateX(0);
}

<div>
    <div
      class="Workbench__Workbench___THi9K"
      data-test-id="cf-ui-workbench"
    >
      <div
        class="Workbench__Workbench__header___2wo2E"
        data-test-id="cf-ui-workbench-header"
      >
        <div
          class="Workbench__Workbench__header-icon___1kJlL"
        >
          <div
            class="ProductIcon__ProductIconContainer___KxjpT ProductIcon__ProductIconContainer--large___2-NC8"
            data-test-id="cf-ui-navigation-icon"
          >
            <svg
              class="ProductIcon__ProductIcon___3MTbf ProductIcon__ProductIcon--positive___3gPLA"
              fill="none"
              height="1em"
              viewBox="0 0 24 24"
              width="1em"
            >
              <path
                d="M18.364 11.09h.909a2.727 2.727 0 110 5.456h-.91v3.181A2.278 2.278 0 0116.092 22h-3.91v-1.818a2.001 2.001 0 00-4 0V22H4.274A2.278 2.278 0 012 19.727v-3.909h1.818a2.001 2.001 0 000-4H2.01V7.91a2.27 2.27 0 012.264-2.273h3.182v-.909a2.727 2.727 0 115.454 0v.91h3.182a2.278 2.278 0 012.273 2.272v3.182zm-2.273 10c.749 0 1.363-.614 1.363-1.363v-4.09h1.819a1.818 1.818 0 000-3.637h-1.819V7.91c0-.75-.614-1.365-1.363-1.365H12V4.727a1.818 1.818 0 00-3.636 0v1.818H4.273c-.747 0-1.355.612-1.355 1.364v3h.9a2.91 2.91 0 012.91 2.91 2.91 2.91 0 01-2.91 2.908H2.91v3c0 .75.615 1.364 1.364 1.364h3v-.91a2.91 2.91 0 012.909-2.908 2.91 2.91 0 012.909 2.909v.909h3z"
              />
            </svg>
          </div>
        </div>
        <div
          class="Workbench__Workbench__header-title___3xp7b"
          data-test-id="workbench-title"
        >
          <h1
            class="Heading__Heading___83D3K"
            data-test-id="cf-ui-heading"
          >
            Apps
          </h1>
        </div>
        <div
          class="Workbench__Workbench__header-actions___mJoSR"
        >
          <button
            class="Button__Button___1ZfFj Button__Button--primary___JImeO"
            data-test-id="cf-ui-button"
            type="button"
          >
            <span
              class="TabFocusTrap__TabFocusTrap___39Vty Button__Button__inner-wrapper___3qrNC"
              tabindex="-1"
            >
              <span
                class="Button__Button__label___3tcOj"
              >
                Create app
              </span>
            </span>
          </button>
        </div>
      </div>
      <div
        class="Workbench__Workbench__content-wrapper___3yWKi"
      >
        <div
          class="Workbench__Workbench__content___1U8bV"
          data-test-id="cf-ui-workbench-content"
        >
          <div
            class="Workbench__Workbench__content-inner___36_Hx Workbench__Workbench__content-inner--default___2wRXn"
          >
            <table
              cellpadding="0"
              cellspacing="0"
              class="Table__Table___3vKIR Table__Table--inline___2jv97"
              data-test-id="cf-ui-table"
            >
              <thead
                class=""
                data-test-id="cf-ui-table-head"
              >
                <tr
                  class=""
                  data-test-id="cf-ui-table-row"
                >
                  <th
                    align="left"
                    class="TableCell__TableCell___ZC2ZI TableCell__TableCell--head___3AHws"
                    data-test-id="cf-ui-table-cell"
                    style="top: 0px;"
                  >
                    Name
                  </th>
                  <th
                    align="left"
                    class="TableCell__TableCell___ZC2ZI TableCell__TableCell--head___3AHws"
                    data-test-id="cf-ui-table-cell"
                    style="top: 0px;"
                  >
                    ID
                  </th>
                  <th
                    align="left"
                    class="TableCell__TableCell___ZC2ZI TableCell__TableCell--head___3AHws"
                    data-test-id="cf-ui-table-cell"
                    style="top: 0px;"
                  >
                    App URL
                  </th>
                  <th
                    align="left"
                    class="TableCell__TableCell___ZC2ZI TableCell__TableCell--head___3AHws"
                    data-test-id="cf-ui-table-cell"
                    style="top: 0px;"
                  />
                </tr>
              </thead>
              <tbody
                data-test-id="cf-ui-table-body"
              >
                <tr
                  class=""
                  data-test-id="cf-ui-table-row"
                >
                  <td
                    align="left"
                    class="TableCell__TableCell___ZC2ZI"
                    data-test-id="cf-ui-table-cell"
                    style="top: 0px;"
                  >
                    <div
                      class="emotion-1"
                    >
                      <a
                        href="/account.organizations?pathname=/my-org-123/apps/definitions/3AjEyjWz5tRouW4cVOF9la/general"
                        route="[object Object]"
                        state="[object Object]"
                        to="account.organizations?pathname=/my-org-123/apps/definitions/3AjEyjWz5tRouW4cVOF9la/general"
                      >
                        <span
                          class="emotion-0"
                        >
                          <div
                            class="ProductIcon__ProductIconContainer___KxjpT ProductIcon__ProductIconContainer--small___3EUYb"
                            data-test-id="cf-ui-navigation-icon"
                          >
                            <svg
                              class="ProductIcon__ProductIcon___3MTbf ProductIcon__ProductIcon--positive___3gPLA"
                              fill="none"
                              height="1em"
                              viewBox="0 0 24 24"
                              width="1em"
                            >
                              <path
                                d="M18.364 11.09h.909a2.727 2.727 0 110 5.456h-.91v3.181A2.278 2.278 0 0116.092 22h-3.91v-1.818a2.001 2.001 0 00-4 0V22H4.274A2.278 2.278 0 012 19.727v-3.909h1.818a2.001 2.001 0 000-4H2.01V7.91a2.27 2.27 0 012.264-2.273h3.182v-.909a2.727 2.727 0 115.454 0v.91h3.182a2.278 2.278 0 012.273 2.272v3.182zm-2.273 10c.749 0 1.363-.614 1.363-1.363v-4.09h1.819a1.818 1.818 0 000-3.637h-1.819V7.91c0-.75-.614-1.365-1.363-1.365H12V4.727a1.818 1.818 0 00-3.636 0v1.818H4.273c-.747 0-1.355.612-1.355 1.364v3h.9a2.91 2.91 0 012.91 2.91 2.91 2.91 0 01-2.91 2.908H2.91v3c0 .75.615 1.364 1.364 1.364h3v-.91a2.91 2.91 0 012.909-2.908 2.91 2.91 0 012.909 2.909v.909h3z"
                              />
                            </svg>
                          </div>
                        </span>
                         
                        <b>
                          Google Analytics
                        </b>
                      </a>
                    </div>
                  </td>
                  <td
                    align="left"
                    class="TableCell__TableCell___ZC2ZI"
                    data-test-id="cf-ui-table-cell"
                    style="top: 0px;"
                  >
                    <div
                      class="emotion-1"
                    >
                      <span
                        class="emotion-2"
                      >
                        3AjEyjWz5tRouW4cVOF9la
                         
                      </span>
                      <div
                        class="CopyButton__CopyButton___OoA5D emotion-3"
                        data-test-id="cf-ui-copy-button"
                        id="copyButton"
                      >
                        <span
                          class="Tooltip__TooltipContainer___3YlPf"
                        >
                          <button
                            class="CopyButton__CopyButton__button___52Bc0 a11y__focus-outline--default___2hwb1"
                            type="button"
                          >
                            <span
                              class="TabFocusTrap__TabFocusTrap___39Vty CopyButton__CopyButton__TabFocusTrap___1Q_DQ"
                              tabindex="-1"
                            >
                              <span
                                class="CopyButton__CopyButton__text___269PQ helpers__sr-only___3Kv3z"
                              >
                                Copy 
                                3AjEyjWz5tRouW4cVOF9la
                                 to clipboard
                              </span>
                              <svg
                                class="Icon__Icon___38Epv Icon__Icon--small___1yGZK Icon__Icon--muted___3egnD"
                                data-test-id="cf-ui-icon"
                                height="1em"
                                viewBox="0 0 24 24"
                                width="1em"
                              >
                                <path
                                  d="M0 0h24v24H0z"
                                  fill="none"
                                />
                                <path
                                  d="M16 1H4c-1.1 0-2 .9-2 2v14h2V3h12V1zm3 4H8c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h11c1.1 0 2-.9 2-2V7c0-1.1-.9-2-2-2zm0 16H8V7h11v14z"
                                />
                              </svg>
                            </span>
                          </button>
                        </span>
                      </div>
                    </div>
                  </td>
                  <td
                    align="left"
                    class="TableCell__TableCell___ZC2ZI"
                    data-test-id="cf-ui-table-cell"
                    style="top: 0px;"
                  >
                    <div
                      class="emotion-1"
                    >
                      <span>
                        localhost:1234
                      </span>
                    </div>
                  </td>
                  <td
                    align="right"
                    class="TableCell__TableCell___ZC2ZI emotion-7"
                    data-test-id="cf-ui-table-cell"
                    style="top: 0px;"
                  >
                    <div
                      class="emotion-6"
                    >
                      <div
                        class="Dropdown__Dropdown___nAsJ-"
                        data-test-id="cf-ui-card-actions"
                      >
                        <button
                          aria-expanded="false"
                          aria-haspopup="menu"
                          class="IconButton__IconButton___1_XeU a11y__focus-outline--default___2hwb1 IconButton__IconButton--primary___1nYDN"
                          data-test-id="cf-ui-icon-button"
                          type="button"
                        >
                          <span
                            class="TabFocusTrap__TabFocusTrap___39Vty IconButton__IconButton__inner___3fnmT"
                            tabindex="-1"
                          >
                            <svg
                              class="Icon__Icon___38Epv Icon__Icon--small___1yGZK undefined IconButton__IconButton__icon___3yZQN"
                              data-test-id="cf-ui-icon"
                              height="1em"
                              viewBox="0 0 24 24"
                              width="1em"
                            >
                              <path
                                d="M0 0h24v24H0z"
                                fill="none"
                              />
                              <path
                                d="M6 10c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2zm12 0c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2zm-6 0c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2z"
                              />
                            </svg>
                            <span
                              class="IconButton__IconButton__label___1kp5y helpers__sr-only___3Kv3z"
                            >
                              Actions
                            </span>
                          </span>
                        </button>
                      </div>
                    </div>
                  </td>
                </tr>
                <tr
                  class=""
                  data-test-id="cf-ui-table-row"
                >
                  <td
                    align="left"
                    class="TableCell__TableCell___ZC2ZI"
                    data-test-id="cf-ui-table-cell"
                    style="top: 0px;"
                  >
                    <div
                      class="emotion-1"
                    >
                      <a
                        href="/account.organizations?pathname=/my-org-123/apps/definitions/2WoMzSs2fRJx79JeVvqdGR/general"
                        route="[object Object]"
                        state="[object Object]"
                        to="account.organizations?pathname=/my-org-123/apps/definitions/2WoMzSs2fRJx79JeVvqdGR/general"
                      >
                        <span
                          class="emotion-0"
                        >
                          <div
                            class="ProductIcon__ProductIconContainer___KxjpT ProductIcon__ProductIconContainer--small___3EUYb"
                            data-test-id="cf-ui-navigation-icon"
                          >
                            <svg
                              class="ProductIcon__ProductIcon___3MTbf ProductIcon__ProductIcon--positive___3gPLA"
                              fill="none"
                              height="1em"
                              viewBox="0 0 24 24"
                              width="1em"
                            >
                              <path
                                d="M18.364 11.09h.909a2.727 2.727 0 110 5.456h-.91v3.181A2.278 2.278 0 0116.092 22h-3.91v-1.818a2.001 2.001 0 00-4 0V22H4.274A2.278 2.278 0 012 19.727v-3.909h1.818a2.001 2.001 0 000-4H2.01V7.91a2.27 2.27 0 012.264-2.273h3.182v-.909a2.727 2.727 0 115.454 0v.91h3.182a2.278 2.278 0 012.273 2.272v3.182zm-2.273 10c.749 0 1.363-.614 1.363-1.363v-4.09h1.819a1.818 1.818 0 000-3.637h-1.819V7.91c0-.75-.614-1.365-1.363-1.365H12V4.727a1.818 1.818 0 00-3.636 0v1.818H4.273c-.747 0-1.355.612-1.355 1.364v3h.9a2.91 2.91 0 012.91 2.91 2.91 2.91 0 01-2.91 2.908H2.91v3c0 .75.615 1.364 1.364 1.364h3v-.91a2.91 2.91 0 012.909-2.908 2.91 2.91 0 012.909 2.909v.909h3z"
                              />
                            </svg>
                          </div>
                        </span>
                         
                        <b>
                          Jira
                        </b>
                      </a>
                    </div>
                  </td>
                  <td
                    align="left"
                    class="TableCell__TableCell___ZC2ZI"
                    data-test-id="cf-ui-table-cell"
                    style="top: 0px;"
                  >
                    <div
                      class="emotion-1"
                    >
                      <span
                        class="emotion-2"
                      >
                        2WoMzSs2fRJx79JeVvqdGR
                         
                      </span>
                      <div
                        class="CopyButton__CopyButton___OoA5D emotion-3"
                        data-test-id="cf-ui-copy-button"
                        id="copyButton"
                      >
                        <span
                          class="Tooltip__TooltipContainer___3YlPf"
                        >
                          <button
                            class="CopyButton__CopyButton__button___52Bc0 a11y__focus-outline--default___2hwb1"
                            type="button"
                          >
                            <span
                              class="TabFocusTrap__TabFocusTrap___39Vty CopyButton__CopyButton__TabFocusTrap___1Q_DQ"
                              tabindex="-1"
                            >
                              <span
                                class="CopyButton__CopyButton__text___269PQ helpers__sr-only___3Kv3z"
                              >
                                Copy 
                                2WoMzSs2fRJx79JeVvqdGR
                                 to clipboard
                              </span>
                              <svg
                                class="Icon__Icon___38Epv Icon__Icon--small___1yGZK Icon__Icon--muted___3egnD"
                                data-test-id="cf-ui-icon"
                                height="1em"
                                viewBox="0 0 24 24"
                                width="1em"
                              >
                                <path
                                  d="M0 0h24v24H0z"
                                  fill="none"
                                />
                                <path
                                  d="M16 1H4c-1.1 0-2 .9-2 2v14h2V3h12V1zm3 4H8c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h11c1.1 0 2-.9 2-2V7c0-1.1-.9-2-2-2zm0 16H8V7h11v14z"
                                />
                              </svg>
                            </span>
                          </button>
                        </span>
                      </div>
                    </div>
                  </td>
                  <td
                    align="left"
                    class="TableCell__TableCell___ZC2ZI"
                    data-test-id="cf-ui-table-cell"
                    style="top: 0px;"
                  >
                    <div
                      class="emotion-1"
                    >
                      <span>
                        localhost:1234
                      </span>
                    </div>
                  </td>
                  <td
                    align="right"
                    class="TableCell__TableCell___ZC2ZI emotion-7"
                    data-test-id="cf-ui-table-cell"
                    style="top: 0px;"
                  >
                    <div
                      class="emotion-6"
                    >
                      <div
                        class="Dropdown__Dropdown___nAsJ-"
                        data-test-id="cf-ui-card-actions"
                      >
                        <button
                          aria-expanded="false"
                          aria-haspopup="menu"
                          class="IconButton__IconButton___1_XeU a11y__focus-outline--default___2hwb1 IconButton__IconButton--primary___1nYDN"
                          data-test-id="cf-ui-icon-button"
                          type="button"
                        >
                          <span
                            class="TabFocusTrap__TabFocusTrap___39Vty IconButton__IconButton__inner___3fnmT"
                            tabindex="-1"
                          >
                            <svg
                              class="Icon__Icon___38Epv Icon__Icon--small___1yGZK undefined IconButton__IconButton__icon___3yZQN"
                              data-test-id="cf-ui-icon"
                              height="1em"
                              viewBox="0 0 24 24"
                              width="1em"
                            >
                              <path
                                d="M0 0h24v24H0z"
                                fill="none"
                              />
                              <path
                                d="M6 10c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2zm12 0c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2zm-6 0c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2z"
                              />
                            </svg>
                            <span
                              class="IconButton__IconButton__label___1kp5y helpers__sr-only___3Kv3z"
                            >
                              Actions
                            </span>
                          </span>
                        </button>
                      </div>
                    </div>
                  </td>
                </tr>
                <tr
                  class=""
                  data-test-id="cf-ui-table-row"
                >
                  <td
                    align="left"
                    class="TableCell__TableCell___ZC2ZI"
                    data-test-id="cf-ui-table-cell"
                    style="top: 0px;"
                  >
                    <div
                      class="emotion-1"
                    >
                      <a
                        href="/account.organizations?pathname=/my-org-123/apps/definitions/3cG9ueyzkY0GCndLiQzmZ0/general"
                        route="[object Object]"
                        state="[object Object]"
                        to="account.organizations?pathname=/my-org-123/apps/definitions/3cG9ueyzkY0GCndLiQzmZ0/general"
                      >
                        <span
                          class="emotion-0"
                        >
                          <div
                            class="ProductIcon__ProductIconContainer___KxjpT ProductIcon__ProductIconContainer--small___3EUYb"
                            data-test-id="cf-ui-navigation-icon"
                          >
                            <svg
                              class="ProductIcon__ProductIcon___3MTbf ProductIcon__ProductIcon--positive___3gPLA"
                              fill="none"
                              height="1em"
                              viewBox="0 0 24 24"
                              width="1em"
                            >
                              <path
                                d="M18.364 11.09h.909a2.727 2.727 0 110 5.456h-.91v3.181A2.278 2.278 0 0116.092 22h-3.91v-1.818a2.001 2.001 0 00-4 0V22H4.274A2.278 2.278 0 012 19.727v-3.909h1.818a2.001 2.001 0 000-4H2.01V7.91a2.27 2.27 0 012.264-2.273h3.182v-.909a2.727 2.727 0 115.454 0v.91h3.182a2.278 2.278 0 012.273 2.272v3.182zm-2.273 10c.749 0 1.363-.614 1.363-1.363v-4.09h1.819a1.818 1.818 0 000-3.637h-1.819V7.91c0-.75-.614-1.365-1.363-1.365H12V4.727a1.818 1.818 0 00-3.636 0v1.818H4.273c-.747 0-1.355.612-1.355 1.364v3h.9a2.91 2.91 0 012.91 2.91 2.91 2.91 0 01-2.91 2.908H2.91v3c0 .75.615 1.364 1.364 1.364h3v-.91a2.91 2.91 0 012.909-2.908 2.91 2.91 0 012.909 2.909v.909h3z"
                              />
                            </svg>
                          </div>
                        </span>
                         
                        <b>
                          Smartling
                        </b>
                      </a>
                    </div>
                  </td>
                  <td
                    align="left"
                    class="TableCell__TableCell___ZC2ZI"
                    data-test-id="cf-ui-table-cell"
                    style="top: 0px;"
                  >
                    <div
                      class="emotion-1"
                    >
                      <span
                        class="emotion-2"
                      >
                        3cG9ueyzkY0GCndLiQzmZ0
                         
                      </span>
                      <div
                        class="CopyButton__CopyButton___OoA5D emotion-3"
                        data-test-id="cf-ui-copy-button"
                        id="copyButton"
                      >
                        <span
                          class="Tooltip__TooltipContainer___3YlPf"
                        >
                          <button
                            class="CopyButton__CopyButton__button___52Bc0 a11y__focus-outline--default___2hwb1"
                            type="button"
                          >
                            <span
                              class="TabFocusTrap__TabFocusTrap___39Vty CopyButton__CopyButton__TabFocusTrap___1Q_DQ"
                              tabindex="-1"
                            >
                              <span
                                class="CopyButton__CopyButton__text___269PQ helpers__sr-only___3Kv3z"
                              >
                                Copy 
                                3cG9ueyzkY0GCndLiQzmZ0
                                 to clipboard
                              </span>
                              <svg
                                class="Icon__Icon___38Epv Icon__Icon--small___1yGZK Icon__Icon--muted___3egnD"
                                data-test-id="cf-ui-icon"
                                height="1em"
                                viewBox="0 0 24 24"
                                width="1em"
                              >
                                <path
                                  d="M0 0h24v24H0z"
                                  fill="none"
                                />
                                <path
                                  d="M16 1H4c-1.1 0-2 .9-2 2v14h2V3h12V1zm3 4H8c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h11c1.1 0 2-.9 2-2V7c0-1.1-.9-2-2-2zm0 16H8V7h11v14z"
                                />
                              </svg>
                            </span>
                          </button>
                        </span>
                      </div>
                    </div>
                  </td>
                  <td
                    align="left"
                    class="TableCell__TableCell___ZC2ZI"
                    data-test-id="cf-ui-table-cell"
                    style="top: 0px;"
                  >
                    <div
                      class="emotion-1"
                    >
                      <span>
                        localhost:8080/frontend
                      </span>
                    </div>
                  </td>
                  <td
                    align="right"
                    class="TableCell__TableCell___ZC2ZI emotion-7"
                    data-test-id="cf-ui-table-cell"
                    style="top: 0px;"
                  >
                    <div
                      class="emotion-6"
                    >
                      <div
                        class="Dropdown__Dropdown___nAsJ-"
                        data-test-id="cf-ui-card-actions"
                      >
                        <button
                          aria-expanded="false"
                          aria-haspopup="menu"
                          class="IconButton__IconButton___1_XeU a11y__focus-outline--default___2hwb1 IconButton__IconButton--primary___1nYDN"
                          data-test-id="cf-ui-icon-button"
                          type="button"
                        >
                          <span
                            class="TabFocusTrap__TabFocusTrap___39Vty IconButton__IconButton__inner___3fnmT"
                            tabindex="-1"
                          >
                            <svg
                              class="Icon__Icon___38Epv Icon__Icon--small___1yGZK undefined IconButton__IconButton__icon___3yZQN"
                              data-test-id="cf-ui-icon"
                              height="1em"
                              viewBox="0 0 24 24"
                              width="1em"
                            >
                              <path
                                d="M0 0h24v24H0z"
                                fill="none"
                              />
                              <path
                                d="M6 10c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2zm12 0c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2zm-6 0c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2z"
                              />
                            </svg>
                            <span
                              class="IconButton__IconButton__label___1kp5y helpers__sr-only___3Kv3z"
                            >
                              Actions
                            </span>
                          </span>
                        </button>
                      </div>
                    </div>
                  </td>
                </tr>
              </tbody>
            </table>
          </div>
        </div>
        <div
          class="Workbench__Workbench__sidebar___3i7n0 Workbench__Workbench__sidebar--right___3f4XO"
          data-test-id="cf-ui-workbench-sidebar-right"
        >
          <div
            class="Typography__Typography___1ZUfE"
            data-test-id="cf-ui-text-container"
          >
            <h3
              class="SectionHeading__SectionHeading___39J6j emotion-24 f36-margin-bottom--l"
              data-test-id="cf-ui-section-heading"
            >
              About Apps
            </h3>
            <p
              class="Paragraph__Paragraph___2aO-9 f36-margin-bottom--m"
              data-test-id="cf-ui-paragraph"
            >
              Build apps for your Contentful organization to extend the core functionality of the web app and optimize the workflow of editors.
            </p>
            <p
              class="Paragraph__Paragraph___2aO-9 f36-margin-bottom--m"
              data-test-id="cf-ui-paragraph"
            >
              Learn more about
               
              <a
                class="TextLink__TextLink___1biUr a11y__focus-outline--default___2hwb1 TextLink__TextLink--primary___2Vc9F"
                data-test-id="cf-ui-text-link"
                href="https://www.contentful.com/developers/docs/extensibility/app-framework/tutorial/?utm_source=webapp&utm_medium=app-listing&utm_campaign=in-app-help"
              >
                <span
                  class="TabFocusTrap__TabFocusTrap___39Vty"
                  tabindex="-1"
                >
                  building Contentful apps
                </span>
              </a>
               
              or check out our
               
              <a
                class="TextLink__TextLink___1biUr a11y__focus-outline--default___2hwb1 TextLink__TextLink--primary___2Vc9F"
                data-test-id="cf-ui-text-link"
                href="https://contentful.com/marketplace?utm_source=webapp&utm_medium=app-listing&utm_campaign=in-app-help"
              >
                <span
                  class="TabFocusTrap__TabFocusTrap___39Vty"
                  tabindex="-1"
                >
                  Marketplace
                </span>
              </a>
              .
            </p>
          </div>
        </div>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`AppListing should show a warning when a user cant manage apps 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": .emotion-1 > div {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  height: 100%;
  max-width: 768px;
  margin: 0 auto;
}

.emotion-0 {
  max-width: 768px;
  margin: 0 auto;
  text-align: center;
  margin-top: 1.5rem;
  margin-bottom: 0.75rem;
}

.emotion-0 svg {
  width: 80%;
}

.emotion-0 button {
  margin-bottom: 1.5rem;
}

<body>
    <div>
      <div
        class="Workbench__Workbench___THi9K emotion-1"
        data-test-id="cf-ui-workbench"
      >
        <div
          class="Workbench__Workbench__content-wrapper___3yWKi"
        >
          <div
            class="emotion-0"
          >
            <apps-private-framework.svg />
            <div
              class="Typography__Typography___1ZUfE"
              data-test-id="cf-ui-text-container"
            >
              <h1
                class="Heading__Heading___83D3K f36-margin-bottom--m"
                data-test-id="cf-ui-heading"
              >
                Build apps for Contentful
              </h1>
              <p
                class="Paragraph__Paragraph___2aO-9 f36-margin-bottom--m"
                data-test-id="cf-ui-paragraph"
              >
                Contentful apps extend and expand the capabilities of the Contentful web app and the editors who use it. Apps empower you to integrate third-party services, build extraordinary workflows and customize the functionality of the Contentful web app.
              </p>
              <p
                class="Paragraph__Paragraph___2aO-9 f36-margin-bottom--m"
                data-test-id="cf-ui-paragraph"
              >
                Learn more about
                 
                <a
                  class="TextLink__TextLink___1biUr a11y__focus-outline--default___2hwb1 TextLink__TextLink--primary___2Vc9F"
                  data-test-id="cf-ui-text-link"
                  href="https://www.contentful.com/developers/docs/extensibility/app-framework/tutorial/?utm_source=webapp&utm_medium=app-listing&utm_campaign=in-app-help"
                >
                  <span
                    class="TabFocusTrap__TabFocusTrap___39Vty"
                    tabindex="-1"
                  >
                    building Contentful apps
                  </span>
                </a>
                 
                or check out our
                 
                <a
                  class="TextLink__TextLink___1biUr a11y__focus-outline--default___2hwb1 TextLink__TextLink--primary___2Vc9F"
                  data-test-id="cf-ui-text-link"
                  href="https://contentful.com/marketplace?utm_source=webapp&utm_medium=app-listing&utm_campaign=in-app-help"
                >
                  <span
                    class="TabFocusTrap__TabFocusTrap___39Vty"
                    tabindex="-1"
                  >
                    Marketplace
                  </span>
                </a>
                .
              </p>
            </div>
            <button
              class="Button__Button___1ZfFj Button__Button--primary___JImeO Button__Button--disabled___1E20M"
              data-test-id="cf-ui-button"
              disabled=""
              type="button"
            >
              <span
                class="TabFocusTrap__TabFocusTrap___39Vty Button__Button__inner-wrapper___3qrNC"
                tabindex="-1"
              >
                <span
                  class="Button__Button__label___3tcOj"
                >
                  Create an app
                </span>
              </span>
            </button>
          </div>
          <div
            class="Note__Note___2eSKN Note__Note--primary___-8-7D"
            data-test-id="cf-ui-note"
          >
            <div
              class="Note__Note__icon___20RqC"
            >
              <svg
                class="Icon__Icon___38Epv Icon__Icon--small___1yGZK undefined"
                data-test-id="cf-ui-icon"
                height="1em"
                viewBox="0 0 24 24"
                width="1em"
              >
                <path
                  d="M0 0h24v24H0z"
                  fill="none"
                />
                <path
                  d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm1 15h-2v-6h2v6zm0-8h-2V7h2v2z"
                />
              </svg>
            </div>
            <div
              class="Note__Note__info___2m_-K"
            >
              <div
                class="Note__Note__content___H1pf-"
              >
                To start building apps for this organization, ask your admin to upgrade your account to the
                 
                <a
                  class="TextLink__TextLink___1biUr a11y__focus-outline--default___2hwb1 TextLink__TextLink--primary___2Vc9F"
                  data-test-id="cf-ui-text-link"
                  href="https://www.contentful.com/help/spaces-and-organizations/?utm_source=webapp&utm_medium=app-listing&utm_campaign=in-app-help#belonging-to-an-organization"
                  rel="noopener noreferrer"
                  target="_blank"
                >
                  <span
                    class="TabFocusTrap__TabFocusTrap___39Vty"
                    tabindex="-1"
                  >
                    developer role
                  </span>
                </a>
                .
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </body>,
  "container": .emotion-1 > div {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  height: 100%;
  max-width: 768px;
  margin: 0 auto;
}

.emotion-0 {
  max-width: 768px;
  margin: 0 auto;
  text-align: center;
  margin-top: 1.5rem;
  margin-bottom: 0.75rem;
}

.emotion-0 svg {
  width: 80%;
}

.emotion-0 button {
  margin-bottom: 1.5rem;
}

<div>
    <div
      class="Workbench__Workbench___THi9K emotion-1"
      data-test-id="cf-ui-workbench"
    >
      <div
        class="Workbench__Workbench__content-wrapper___3yWKi"
      >
        <div
          class="emotion-0"
        >
          <apps-private-framework.svg />
          <div
            class="Typography__Typography___1ZUfE"
            data-test-id="cf-ui-text-container"
          >
            <h1
              class="Heading__Heading___83D3K f36-margin-bottom--m"
              data-test-id="cf-ui-heading"
            >
              Build apps for Contentful
            </h1>
            <p
              class="Paragraph__Paragraph___2aO-9 f36-margin-bottom--m"
              data-test-id="cf-ui-paragraph"
            >
              Contentful apps extend and expand the capabilities of the Contentful web app and the editors who use it. Apps empower you to integrate third-party services, build extraordinary workflows and customize the functionality of the Contentful web app.
            </p>
            <p
              class="Paragraph__Paragraph___2aO-9 f36-margin-bottom--m"
              data-test-id="cf-ui-paragraph"
            >
              Learn more about
               
              <a
                class="TextLink__TextLink___1biUr a11y__focus-outline--default___2hwb1 TextLink__TextLink--primary___2Vc9F"
                data-test-id="cf-ui-text-link"
                href="https://www.contentful.com/developers/docs/extensibility/app-framework/tutorial/?utm_source=webapp&utm_medium=app-listing&utm_campaign=in-app-help"
              >
                <span
                  class="TabFocusTrap__TabFocusTrap___39Vty"
                  tabindex="-1"
                >
                  building Contentful apps
                </span>
              </a>
               
              or check out our
               
              <a
                class="TextLink__TextLink___1biUr a11y__focus-outline--default___2hwb1 TextLink__TextLink--primary___2Vc9F"
                data-test-id="cf-ui-text-link"
                href="https://contentful.com/marketplace?utm_source=webapp&utm_medium=app-listing&utm_campaign=in-app-help"
              >
                <span
                  class="TabFocusTrap__TabFocusTrap___39Vty"
                  tabindex="-1"
                >
                  Marketplace
                </span>
              </a>
              .
            </p>
          </div>
          <button
            class="Button__Button___1ZfFj Button__Button--primary___JImeO Button__Button--disabled___1E20M"
            data-test-id="cf-ui-button"
            disabled=""
            type="button"
          >
            <span
              class="TabFocusTrap__TabFocusTrap___39Vty Button__Button__inner-wrapper___3qrNC"
              tabindex="-1"
            >
              <span
                class="Button__Button__label___3tcOj"
              >
                Create an app
              </span>
            </span>
          </button>
        </div>
        <div
          class="Note__Note___2eSKN Note__Note--primary___-8-7D"
          data-test-id="cf-ui-note"
        >
          <div
            class="Note__Note__icon___20RqC"
          >
            <svg
              class="Icon__Icon___38Epv Icon__Icon--small___1yGZK undefined"
              data-test-id="cf-ui-icon"
              height="1em"
              viewBox="0 0 24 24"
              width="1em"
            >
              <path
                d="M0 0h24v24H0z"
                fill="none"
              />
              <path
                d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm1 15h-2v-6h2v6zm0-8h-2V7h2v2z"
              />
            </svg>
          </div>
          <div
            class="Note__Note__info___2m_-K"
          >
            <div
              class="Note__Note__content___H1pf-"
            >
              To start building apps for this organization, ask your admin to upgrade your account to the
               
              <a
                class="TextLink__TextLink___1biUr a11y__focus-outline--default___2hwb1 TextLink__TextLink--primary___2Vc9F"
                data-test-id="cf-ui-text-link"
                href="https://www.contentful.com/help/spaces-and-organizations/?utm_source=webapp&utm_medium=app-listing&utm_campaign=in-app-help#belonging-to-an-organization"
                rel="noopener noreferrer"
                target="_blank"
              >
                <span
                  class="TabFocusTrap__TabFocusTrap___39Vty"
                  tabindex="-1"
                >
                  developer role
                </span>
              </a>
              .
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`AppListing should show the empty state when no definitions are passed 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": .emotion-1 > div {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  height: 100%;
  max-width: 768px;
  margin: 0 auto;
}

.emotion-0 {
  max-width: 768px;
  margin: 0 auto;
  text-align: center;
  margin-top: 1.5rem;
  margin-bottom: 0.75rem;
}

.emotion-0 svg {
  width: 80%;
}

.emotion-0 button {
  margin-bottom: 1.5rem;
}

<body>
    <div>
      <div
        class="Workbench__Workbench___THi9K emotion-1"
        data-test-id="cf-ui-workbench"
      >
        <div
          class="Workbench__Workbench__content-wrapper___3yWKi"
        >
          <div
            class="emotion-0"
          >
            <apps-private-framework.svg />
            <div
              class="Typography__Typography___1ZUfE"
              data-test-id="cf-ui-text-container"
            >
              <h1
                class="Heading__Heading___83D3K f36-margin-bottom--m"
                data-test-id="cf-ui-heading"
              >
                Build apps for Contentful
              </h1>
              <p
                class="Paragraph__Paragraph___2aO-9 f36-margin-bottom--m"
                data-test-id="cf-ui-paragraph"
              >
                Contentful apps extend and expand the capabilities of the Contentful web app and the editors who use it. Apps empower you to integrate third-party services, build extraordinary workflows and customize the functionality of the Contentful web app.
              </p>
              <p
                class="Paragraph__Paragraph___2aO-9 f36-margin-bottom--m"
                data-test-id="cf-ui-paragraph"
              >
                Learn more about
                 
                <a
                  class="TextLink__TextLink___1biUr a11y__focus-outline--default___2hwb1 TextLink__TextLink--primary___2Vc9F"
                  data-test-id="cf-ui-text-link"
                  href="https://www.contentful.com/developers/docs/extensibility/app-framework/tutorial/?utm_source=webapp&utm_medium=app-listing&utm_campaign=in-app-help"
                >
                  <span
                    class="TabFocusTrap__TabFocusTrap___39Vty"
                    tabindex="-1"
                  >
                    building Contentful apps
                  </span>
                </a>
                 
                or check out our
                 
                <a
                  class="TextLink__TextLink___1biUr a11y__focus-outline--default___2hwb1 TextLink__TextLink--primary___2Vc9F"
                  data-test-id="cf-ui-text-link"
                  href="https://contentful.com/marketplace?utm_source=webapp&utm_medium=app-listing&utm_campaign=in-app-help"
                >
                  <span
                    class="TabFocusTrap__TabFocusTrap___39Vty"
                    tabindex="-1"
                  >
                    Marketplace
                  </span>
                </a>
                .
              </p>
            </div>
            <button
              class="Button__Button___1ZfFj Button__Button--primary___JImeO"
              data-test-id="cf-ui-button"
              type="button"
            >
              <span
                class="TabFocusTrap__TabFocusTrap___39Vty Button__Button__inner-wrapper___3qrNC"
                tabindex="-1"
              >
                <span
                  class="Button__Button__label___3tcOj"
                >
                  Create an app
                </span>
              </span>
            </button>
          </div>
        </div>
      </div>
    </div>
  </body>,
  "container": .emotion-1 > div {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  height: 100%;
  max-width: 768px;
  margin: 0 auto;
}

.emotion-0 {
  max-width: 768px;
  margin: 0 auto;
  text-align: center;
  margin-top: 1.5rem;
  margin-bottom: 0.75rem;
}

.emotion-0 svg {
  width: 80%;
}

.emotion-0 button {
  margin-bottom: 1.5rem;
}

<div>
    <div
      class="Workbench__Workbench___THi9K emotion-1"
      data-test-id="cf-ui-workbench"
    >
      <div
        class="Workbench__Workbench__content-wrapper___3yWKi"
      >
        <div
          class="emotion-0"
        >
          <apps-private-framework.svg />
          <div
            class="Typography__Typography___1ZUfE"
            data-test-id="cf-ui-text-container"
          >
            <h1
              class="Heading__Heading___83D3K f36-margin-bottom--m"
              data-test-id="cf-ui-heading"
            >
              Build apps for Contentful
            </h1>
            <p
              class="Paragraph__Paragraph___2aO-9 f36-margin-bottom--m"
              data-test-id="cf-ui-paragraph"
            >
              Contentful apps extend and expand the capabilities of the Contentful web app and the editors who use it. Apps empower you to integrate third-party services, build extraordinary workflows and customize the functionality of the Contentful web app.
            </p>
            <p
              class="Paragraph__Paragraph___2aO-9 f36-margin-bottom--m"
              data-test-id="cf-ui-paragraph"
            >
              Learn more about
               
              <a
                class="TextLink__TextLink___1biUr a11y__focus-outline--default___2hwb1 TextLink__TextLink--primary___2Vc9F"
                data-test-id="cf-ui-text-link"
                href="https://www.contentful.com/developers/docs/extensibility/app-framework/tutorial/?utm_source=webapp&utm_medium=app-listing&utm_campaign=in-app-help"
              >
                <span
                  class="TabFocusTrap__TabFocusTrap___39Vty"
                  tabindex="-1"
                >
                  building Contentful apps
                </span>
              </a>
               
              or check out our
               
              <a
                class="TextLink__TextLink___1biUr a11y__focus-outline--default___2hwb1 TextLink__TextLink--primary___2Vc9F"
                data-test-id="cf-ui-text-link"
                href="https://contentful.com/marketplace?utm_source=webapp&utm_medium=app-listing&utm_campaign=in-app-help"
              >
                <span
                  class="TabFocusTrap__TabFocusTrap___39Vty"
                  tabindex="-1"
                >
                  Marketplace
                </span>
              </a>
              .
            </p>
          </div>
          <button
            class="Button__Button___1ZfFj Button__Button--primary___JImeO"
            data-test-id="cf-ui-button"
            type="button"
          >
            <span
              class="TabFocusTrap__TabFocusTrap___39Vty Button__Button__inner-wrapper___3qrNC"
              tabindex="-1"
            >
              <span
                class="Button__Button__label___3tcOj"
              >
                Create an app
              </span>
            </span>
          </button>
        </div>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
